# Qml_Test2

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc  resources.qrc
